Fix nav CTA on mobile

--- a/resources/assets/sass/_defaults.sass
+++ b/resources/assets/sass/_defaults.sass
@@ -378,6 +378,11 @@ footer
 			font-weight: normal !important
 			text-transform: uppercase !important
 
+			&.cta
+
+				a
+					border-radius: 0 !important
+
 			a
 				margin: 0 !important
 				display: block !important
